PN-1021 aggiunti campi aggiuntivi richiesti dalle deleghe
